@@ -13,6 +13,8 @@
 #include "lily-proto.hh"
 #include "lily-guile.hh"
 
+#include "drul-array.hh"
+#include "parray.hh"
 
 /**
   Resolve conflicts between various Note_columns (chords).
